[package]
name = "MiniRedis"
version = "0.0.1"
description = "Mini Redis"
repository = "https://github.com/GuilhermeWerner/MiniRedis"
authors = ["GuilhermeWerner <guilhermeqwerner@gmail.com>"]
license = "MIT"
edition = "2018"
publish = false

[[bin]]
name="Client"
path = "Source/Client.rs"

[[bin]]
name="Server"
path = "Source/Server.rs"

[dependencies]
tokio = { version = "1.0.2", features = ["full"] }
mini-redis = "0.4"
bytes = "1.0.1"
crossbeam = "0.7"
futures = "0.3"

[[example]]
name="Hello"
path = "Examples/Hello.rs"

[[example]]
name="ReadPart"
path = "Tutorial/ReadPart.rs"

[[example]]
name="ReadFile"
path = "Tutorial/ReadFile.rs"

[[example]]
name="WritePart"
path = "Tutorial/WritePart.rs"

[[example]]
name="WriteFile"
path = "Tutorial/WriteFile.rs"

[[example]]
name="CreateFile"
path = "Tutorial/CreateFile.rs"

[[example]]
name="Echo"
path = "Tutorial/Echo.rs"

[[example]]
name="EchoCopy"
path = "Tutorial/EchoCopy.rs"

[[example]]
name="Future"
path = "Tutorial/Future.rs"

[[example]]
name="MiniTokio"
path = "Tutorial/MiniTokio.rs"

[[example]]
name="Waker"
path = "Tutorial/Waker.rs"
